2008-11-19  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Functions.pm (fixperms): Fix chmod call to
	also work when POSIXLY_CORRECT is set.

2008-11-11  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-architecture.pl: Use new style functions calls.
	* scripts/dpkg-distaddfile.pl: Likewise.
	* scripts/dpkg-divert.pl: Likewise.
	* scripts/dpkg-genchanges.pl: Likewise.
	* scripts/dpkg-gencontrol.pl: Likewise.
	* scripts/dpkg-gensymbols.pl: Likewise.
	* scripts/dpkg-scanpackages.pl: Likewise.
	* scripts/dpkg-statoverride.pl: Likewise.
	* scripts/update-alternatives.pl: Likewise.

2008-11-08  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/Objdump.pm (_parse): Support RUNPATH exactly
	like RPATH but taking precedence over it.

2008-10-22  Guillem Jover  <guillem@debian.org>

	* lib/ehandle.c (error_unwind): Remove unused cleanupentry code.

2008-10-15  Guillem Jover  <guillem@debian.org>

	* lib/dbmodify.c (modstatdb_shutdown): Use importanttmpfile on unlink
	instead of constructing the file name again.

2008-10-15  Guillem Jover  <guillem@debian.org>

	* src/Makefile.am (dpkg_query_SOURCES): Remove 'errors.c'.
	* src/main.h (nerrs): Remove declaration.
	* src/errors.c (nerrs): Change from extern to static.
	* src/query.c (failures): New variable.
	(errabort): Remove variable.
	(listpackages): Use failures instead of nerrs.
	(searchfiles): Likewise.
	(showpackages): Likewise.
	(enqperpackage): Likewise. Do not define nor initialize failures.
	(main): Use failures variable instead of reportbroken_retexitstatus.

2008-09-14  Guillem Jover  <guillem@debian.org>

	* libcompat/scandir.c (scandir): Handle case when filter and cmp
	function arguments are NULL.

2008-09-14  Guillem Jover  <guillem@debian.org>

	* libcompat/compat.h (scandir): Rename arguments from select to
	filter and compar to cmp.
	* libcompat/scandir.c (scandir): Likewise.

2008-09-14  Guillem Jover  <guillem@debian.org>
