@@ -1,3 +1,8 @@
+2008-12-05  Guillem Jover  <guillem@debian.org>
+
+	* lib/dpkg.h (warningf): Rename to ...
+	(warning): ... this. Fix all callers.
+
 2008-11-19  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Source/Functions.pm (fixperms): Fix chmod call to
